--- a/index.html
+++ b/index.html
@@ -2,15 +2,43 @@
 <html>
 <head>
     <meta charset="utf-8" http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>OxyLIFT</title>
+    <title>Angular Template</title>
     <!-- inject:css -->
-    <link rel="stylesheet" href="/css/bundle.min.css">
+    <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/bower_components/nprogress/nprogress.css">
+    <link rel="stylesheet" href="/bower_components/toastr/toastr.css">
+    <link rel="stylesheet" href="/src/css/site.css">
     <!-- endinject -->
 </head>
 <body>
-    <div ng-include="'template/shell.html'" ng-cloak=""></div>
+    <div ng-include="'/template/shell.html'" ng-cloak=""></div>
     <!-- inject:js -->
-    <script src="/js/bundle.min.js"></script>
+    <script src="/bower_components/jquery/dist/jquery.js"></script>
+    <script src="/bower_components/angular/angular.js"></script>
+    <script src="/bower_components/ui-router/release/angular-ui-router.js"></script>
+    <script src="/bower_components/moment/moment.js"></script>
+    <script src="/bower_components/nprogress/nprogress.js"></script>
+    <script src="/bower_components/toastr/toastr.js"></script>
+    <script src="/src/js/app/app.module.js"></script>
+    <script src="/src/js/app/blocks/router/router.module.js"></script>
+    <script src="/src/js/app/core/core.module.js"></script>
+    <script src="/src/js/app/blocks/logger/logger.module.js"></script>
+    <script src="/src/js/app/data/data.module.js"></script>
+    <script src="/src/js/app/blocks/exception/exception.module.js"></script>
+    <script src="/src/js/app/layout/layout.module.js"></script>
+    <script src="/src/js/app/main/home/home.module.js"></script>
+    <script src="/src/js/app/layout/shell.js"></script>
+    <script src="/src/js/app/core/config.js"></script>
+    <script src="/src/js/app/blocks/exception/exception.js"></script>
+    <script src="/src/js/app/data/entityManagerFactory.js"></script>
+    <script src="/src/js/app/blocks/logger/logger.js"></script>
+    <script src="/src/js/app/data/data.js"></script>
+    <script src="/src/js/app/blocks/router/routehelper.js"></script>
+    <script src="/src/js/app/core/constants.js"></script>
+    <script src="/src/js/app/main/home/home.js"></script>
+    <script src="/src/js/app/blocks/exception/exception-handler.provider.js"></script>
     <!-- endinject -->
 </body>
 </html>
